Adjusting bg color + preventing bounce on IOS

--- a/css/linguago.css
+++ b/css/linguago.css
@@ -1,7 +1,8 @@
 body,
-html {
-    position: fixed;
-}
+ html {
+     position: fixed;
+    width:100%;
+ }
 
 @keyframes fade {
     0% {
@@ -65,13 +66,13 @@ ul {
 svg {
     touch-action: none;
     user-select: none;
-    background: blue;
+    background:#0071c0;
     width: 100%;
     height: 100%;
 }
 
 svg #background {
-    fill:#0071c0;
+
 }
 
 
